--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link
 			href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap"
@@ -11,6 +12,6 @@
 	</head>
 	<body>
 		<div id="app"></div>
-		<script src="bundle.js"></script>
+		<script src="/bundle.js"></script>
 	</body>
 </html>
